src/components/style.css
/* ---- SHARED COMPONENTS STYLES ---- */
/* --- Header --- */
header .header-container {
  position: absolute;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
  width: 100vw;
  padding: 2rem 0rem;
}

header .header-container a img {
  margin-left: 2rem;
}

header .header-container hr {
  width: 35%;
  margin-right: -120px;
  border-color: rgba(255, 255, 255, 0.3);
  z-index: 100;
}

header .header-container .mobile-menu-btn {
  display: none;
  margin-right: 2rem;
  height: 35px;
  width: 35px;
  background-color: transparent;
  border: 0;
  cursor: pointer;
}

header .header-container .mobile-menu-btn img {
  width: 100%;
}

/* --- HeaderMenu --- */
.header-menu {
  display: flex;
  flex-direction: column;
  align-items: end;
  gap: 2rem;
  background-color: rgba(255, 255, 255, 0.07);
  backdrop-filter: blur(6px);
  padding: 0 2rem ;
  height: auto;
  width: 60vw;
  transition: .4s;
}

.header-menu .close-menu-btn {
  display: none;
  background-color: transparent;
  height: 30px;
  width: 30px;
  border: 0;
  margin: 0 0 2rem 0;
  cursor: pointer;
}

.header-menu .close-menu-btn img {
  width: 100%;
}

.header-menu ul {
  display: flex;
  list-style: none;
}

.header-menu ul li,
.header-menu ul li a {
  padding: 25px 15px;
}

.header-menu ul li {
  border-bottom: 3px solid transparent;
}

.header-menu ul li a {
  text-decoration: none;
  transition: .4s;
  letter-spacing: 2px;
}

.header-menu ul li a:hover {
  border-bottom: 3px solid rgba(255, 255, 255, 0.5);
}

.header-menu ul li a.active {
  border-bottom: 3px solid #FFF;
}

/* --- SpanHeading --- */
.span-heading {
  display: flex;
  gap: 14px;
  font-size: 1.5rem;
  letter-spacing: 4px;
}

.span-heading #number {
  opacity: 25%;
  font-weight: bold;
}

/* --- SmallTitle --- */
.small-title {
  font-family: var(--bellefair);
  font-size: 2rem;
  opacity: .5;
}

/* --- BigTitle --- */
.big-title {
  font-family: var(--bellefair);
  font-size: 3.5rem;
  margin-bottom: 10px;
}


/* --- MEDIA QUERIES --- */
/* --- Smaller Desktop --- */
@media screen and (max-width: 1155px) {
  /* Header */
  header .header-container hr {
    width: 24%;
  }

  /* HeaderMenu */
  .header-menu {
    width: 65vw;
  }
}

/* --- Tablet --- */
@media screen and (max-width: 960px) {
  /* Header */
  header .header-container hr {
    display: none;
  }

  /* HeaderMenu */
  .header-menu {
    width: 100%;
  }

  .header-menu ul li {
    padding: 25px 10px;
  }

  /* SpanHeading */
  .span-heading {
    padding-top: 1.5rem;
  }
}

/* --- Mobile --- */
@media screen and (max-width: 700px) {
  /* Header */
  header .header-container .mobile-menu-btn {
    display: block;
  }

  /* HeaderMenu */
  .header-menu {
    position: absolute;
    top: 0;
    right: -500px;
    opacity: 0;
    pointer-events: none;
    backdrop-filter: blur(30px);
    padding: 2rem 1rem 2rem 1.5rem;
    height: 100vh;
    width: 70vw;
    z-index: 200;
  }

  .header-menu.open {
    right: 0;
    opacity: 1;
    pointer-events: all;
  }

  .header-menu .close-menu-btn {
    display: block;
  }

  .header-menu ul {
    flex-direction: column;
    width: 100%;
  }

  .header-menu ul li {
    border-bottom: 0;
    padding: 15px 0;
    border-right: 3px solid transparent;
  }

  .header-menu ul li a {
    display: block;
    padding: 8px 10px;
    font-size: 1.2rem;
  }
  
  .header-menu ul li a:hover {
    border-bottom: 0;
    border-right: 3px solid rgba(255, 255, 255, 0.5);
  }
  
  .header-menu ul li a.active {
    border-bottom: 0;
    border-right: 3px solid #FFF;
  }

  /* SmallTitle */
  .small-title {
    font-size: 1.5rem;
  }

  /* BigTitle */
  .big-title {
    font-size: 2rem;
  }
}

